added images to res

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,13 @@
             android:id="@+id/timestamp"/>
     </LinearLayout>
 
-
+    <Button
+        android:text="Get Creatures"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonGetCreatures"
+        android:onClick="onGetCreatures"
+        android:layout_weight="1" />
 
 
 </LinearLayout>
