--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_running"
+    android:id="@+id/activity_run"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="course.examples.creaturun.RunningActivity"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context="course.examples.creaturun.RunActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,15 +26,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Speed: " />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Timestamp: " />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Distance: " />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Speed: " />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -44,23 +46,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/latitude"/>
+            android:id="@+id/latitude1"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/longitude"/>
+            android:id="@+id/longitude1"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/speed"/>
+            android:id="@+id/timestamp1"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/timestamp"/>
+            android:id="@+id/distance1"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/distance"/>
+            android:id="@+id/speed1"/>
+
     </LinearLayout>
 
 </LinearLayout>
+
