--- a/app/src/main/res/layout/activity_running2.xml
+++ b/app/src/main/res/layout/activity_running2.xml
@@ -19,7 +19,7 @@
         android:id="@+id/map"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <LinearLayout
@@ -33,15 +33,15 @@
                 android:id="@+id/speedView"
                 android:textSize="20sp"/>
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="124dp"
                 android:layout_height="wrap_content"
-                android:text="Elapsed time: "
+                android:text="Run time:"
                 android:id="@+id/timeView"
                 android:textSize="20sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Distance traveled: "
+                android:text="Distance:"
                 android:id="@+id/distanceView"
                 android:textSize="20sp"/>
         </LinearLayout>
