--- a/app/src/main/res/layout/activity_creature_view.xml
+++ b/app/src/main/res/layout/activity_creature_view.xml
@@ -34,6 +34,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/backButton"
-        android:id="@+id/creatureGrid" />
+        android:id="@+id/creatureGrid"
+        />
 
 </RelativeLayout>
