--- a/app/src/main/res/layout/activity_creature_view.xml
+++ b/app/src/main/res/layout/activity_creature_view.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#084F8B"
+    android:background="#283593"
     tools:context="course.examples.creaturun.CreatureView">
 
     <Button
