--- a/app/src/main/res/layout/activity_get_creatures.xml
+++ b/app/src/main/res/layout/activity_get_creatures.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#283593"
     tools:context="course.examples.creaturun.GetCreatures">
     <course.examples.creaturun.GetCreaturesView
         android:layout_width="match_parent"
