--- a/app/src/main/res/layout/activity_run_summary.xml
+++ b/app/src/main/res/layout/activity_run_summary.xml
@@ -9,14 +9,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="course.examples.creaturun.RunSummary">
+    android:background="#283593"
+    tools:context="course.examples.creaturun.RunSummary"
+    android:weightSum="1">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/map_view"/>
+        android:layout_width="match_parent"
+        android:layout_height="341dp"
+        android:id="@+id/map_view"
+        android:layout_weight="0.64" />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <LinearLayout
@@ -27,17 +31,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/summaryAverageSpeedView"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textColor="#ffffff"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/summaryTotalTimeView"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textColor="#ffffff"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/summaryTotalDistanceView"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textColor="#ffffff"/>
         </LinearLayout>
 
         <Button
