--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,10 @@
         />
 
     <ImageView
-        android:layout_width="168dp"
-        android:layout_height="128dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:tint="#ffffff"
-        app:srcCompat="@drawable/running_stick_figure"
+        android:background="@drawable/brown_creature_animation"
         android:id="@+id/imageView"
         android:layout_weight="0.60" />
 
