--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,11 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="#283593"
-    tools:context="course.examples.creaturun.MainActivity"
-    android:weightSum="1">
+    tools:context="course.examples.creaturun.MainActivity">
 
     <TextView
         android:text="Creaturun"
@@ -27,12 +24,11 @@
         />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="340dp"
+        android:layout_height="235dp"
+        android:layout_gravity="center_horizontal"
         android:background="@drawable/brown_creature_animation"
-        android:id="@+id/imageView"
-        android:layout_weight="0.60" />
+        android:id="@+id/imageView" />
 
     <Button
         android:text="Start Run!"
@@ -44,7 +40,7 @@
         android:layout_gravity="center"
         android:id="@+id/startRunButton"
         android:onClick="onStartRun"
-        android:textSize="22sp" />
+        android:textSize="22sp"/>
 
     <Button
         android:text="View Creatures"
