Changed all buttons/textviews defined through xml to use the custom font

--- a/app/src/main/res/layout/activity_creature_view.xml
+++ b/app/src/main/res/layout/activity_creature_view.xml
@@ -19,7 +19,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="onBack"
-        android:id="@+id/backButton" />
+        android:id="@+id/backButton"
+        fontPath="fonts/Vanilla.ttf"/>
 
     <GridView
         android:layout_width="match_parent"
