--- a/app/src/main/res/layout/creature_popup.xml
+++ b/app/src/main/res/layout/creature_popup.xml
@@ -17,13 +17,15 @@
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/popupName" />
+            android:id="@+id/popupName"
+            fontPath="fonts/Vanilla.ttf"/>
 
         <TextView
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/popupCatchDate" />
+            android:id="@+id/popupCatchDate"
+            fontPath="fonts/Vanilla.ttf"/>
     </LinearLayout>
 
     <ImageView
