--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -18,7 +18,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Latitude: " />
+            android:text="Latitude: "
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
