--- a/app/src/main/res/layout/activity_running2.xml
+++ b/app/src/main/res/layout/activity_running2.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:background="#283593"
@@ -19,50 +19,53 @@
         android:layout_weight="0.76"
         android:id="@+id/map"/>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <LinearLayout
+        android:orientation="vertical">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Speed: 0 mph"
-                android:textColor="#ffffff"
-                android:id="@+id/speedView"
-                android:textSize="20sp"
-                fontPath="fonts/Vanilla.ttf"/>
-            <TextView
-                android:layout_width="124dp"
-                android:layout_height="wrap_content"
-                android:text="Run time: 0:00:00"
-                android:textColor="#ffffff"
-                android:id="@+id/timeView"
-                android:textSize="20sp"
-                fontPath="fonts/Vanilla.ttf"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Distance: 0 miles"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:id="@+id/distanceView"
-                fontPath="fonts/Vanilla.ttf"/>
-        </LinearLayout>
+            android:text="Speed: 0 mph"
+            android:textColor="#ffffff"
+            android:id="@+id/speedView"
+            android:textSize="20sp"
+            fontPath="fonts/Vanilla.ttf"/>
+        <TextView
+            android:layout_width="124dp"
+            android:layout_height="wrap_content"
+            android:text="Run time: 0:00:00"
+            android:textColor="#ffffff"
+            android:id="@+id/timeView"
+            android:textSize="20sp"
+            fontPath="fonts/Vanilla.ttf"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Distance: 0 miles"
+            android:textSize="20sp"
+            android:textColor="#ffffff"
+            android:id="@+id/distanceView"
+            fontPath="fonts/Vanilla.ttf"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="End run"
-            android:layout_marginLeft="60dp"
+            android:textColor="#ffffff"
+            android:background="#FF1493"
             android:layout_gravity="center"
             android:onClick="onClickEndRun"
             fontPath="fonts/Vanilla.ttf"
             />
-
     </LinearLayout>
 
 </LinearLayout>
